update replay, UI, hide two answer